project/stage/tests/accept/empty_functions/no_params/boolean_func.ul
boolean ____kOk234ka_() {












}
