project/stage/tests/reject/bad_statements/bad_if_else/missing_brace.ul
boolean f() {
    if ( "ok" ) {

    } else {


}
